# sherpa-onnx

cmake/: cmake_extension.py
sherpa-onnx/csrc/: CMakeLists.txt  sherpa-display-tool.h  sherpa-onnx-vad-microphone-simulated-streaming-asr-tool.cc
